--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,34 @@ a {
 }
 
 .wrapper {
-  background-color: yellow;
   max-width: 940px;
   margin: 0 auto;
+  padding: 0 5%;
+  background-color: yellow;
+}
+
+#logo {
+  text-align: center;
+  margin: 0;
+}
+
+a {
+  color: #6ab47b;
+}
+
+header {
+  background: #6ab47b;
+  border-color: #599a68;
+}
+
+h1, h2 {
+  color: #fff;
+}
+
+nav {
+  background: #599a68;
+}
+
+nav a {
+  color: #fff;
 }
