--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,11 @@
-/*@import url(//db.onlinewebfonts.com/c/eaf97b4f476e6bb0485a27c26607f588?family=Changa+One);
-
-@font-face {font-family: "Changa One";
-    src: url("//db.onlinewebfonts.com/t/eaf97b4f476e6bb0485a27c26607f588.eot");
-    src: url("//db.onlinewebfonts.com/t/eaf97b4f476e6bb0485a27c26607f588.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/eaf97b4f476e6bb0485a27c26607f588.woff2") format("woff2"),
-    url("//db.onlinewebfonts.com/t/eaf97b4f476e6bb0485a27c26607f588.woff") format("woff"),
-    url("//db.onlinewebfonts.com/t/eaf97b4f476e6bb0485a27c26607f588.ttf") format("truetype"),
-    url("//db.onlinewebfonts.com/t/eaf97b4f476e6bb0485a27c26607f588.svg#Changa One") format("svg");
-}*/
 
 /*******************
 GENERAL
 *******************/
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
 
 .wrapper {
   max-width: 940px;
@@ -24,14 +18,86 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+}
+
 
 /*************************
 HEADING
 ************************/
 
+header {
+  float: left;
+  margin: 0 0 30px 0;
+  padding: 5px 0 0 0;
+  width: 100%;
+}
+
 #logo {
   text-align: center;
   margin: 0;
+}
+
+h1 {
+  font-family: "Changa One", sans-serif;
+  margin: 15px 0;
+  font-size: 1.75em;
+  font-weight: normal;
+  line-height: 0.8em;
+}
+
+h2 {
+  font-size: 0.75em;
+  margin-left: -5px 0 0;
+  font-weight: normal;
+}
+/*************************
+NAVIGATION
+************************/
+
+nav {
+  text-align: center;
+  padding: 10px 0;
+  margin: 20px 0 0;
+}
+
+/*************************
+FOOTER
+************************/
+footer {
+  font-size: 0.75em;
+  text-align: center;
+  clear: both;
+  padding-top: 50px;
+  /*color: #ccc;*/
+  color: #999;
+}
+
+/*************************
+PAGE: PORTFOLIO
+************************/
+
+#gallery {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+#gallery li {
+  float: left;
+  width: 45%;
+  margin: 2.5%;
+  background-color: #f5f5f5;
+  /*background-color: #fff;*/
+  color: #bdc3c7;
+}
+
+#gallery li a p {
+  margin: 0;
+  padding: 5%;
+  font-size: 0.75em;
+  color: #bdc3c7;
 }
 
 /*************************
@@ -64,8 +130,7 @@ nav {
 h1, h2 {
   color: #fff;
   color: #E7E4E4;
-  font-family: "Changa One";
-  font-weight: 400;
+
 }
 
 /* links */
