--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,21 @@ nav {
   margin: 20px 0 0;
 }
 
+nav ul {
+  list-style: none;
+  margin: 0 10px;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+}
+
+nav a {
+  font-weight: 800;
+  padding: 15px 10px;
+}
+
 /*************************
 FOOTER
 ************************/
@@ -124,6 +139,8 @@ header {
 nav {
   background: #599a68;
 }
+
+
 
 /* logo text */
 
