--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ img {
   max-width: 100%;
 }
 
+h3 {
+  margin: 0 0 1em 0;
+}
+
 
 /*************************
 HEADING
@@ -103,6 +107,7 @@ PAGE: PORTFOLIO
   margin: 0;
   padding: 0;
   list-style: none;
+
 }
 
 #gallery li {
@@ -112,6 +117,7 @@ PAGE: PORTFOLIO
   background-color: #f5f5f5;
   /*background-color: #fff;*/
   color: #bdc3c7;
+
 }
 
 #gallery li a p {
@@ -119,6 +125,28 @@ PAGE: PORTFOLIO
   padding: 5%;
   font-size: 0.75em;
   color: #bdc3c7;
+}
+
+/*************************
+PAGE: ABOUT
+************************/
+
+.profile-photo {
+  display: block;
+  max-width: 150px;
+  margin: 0 auto 30px;
+  border-radius: 100%;
+}
+
+/*************************
+PAGE: CONTACT
+************************/
+
+.contact-info {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 0.9em;
 }
 
 /*************************
