--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,28 @@ PAGE: CONTACT
   font-size: 0.9em;
 }
 
+.contact-info a {
+  display: block;
+  min-height: 20px;
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  padding: 0 0 0 30px;
+  margin: 0 0 10px;
+}
+
+.contact-info li.phone a {
+  background-image: url('../img/phone.png');
+}
+
+.contact-info li.mail a {
+  background-image: url('../img/mail.png');
+}
+
+.contact-info li.linkin a {
+  background-image: url('../img/linkin.png');
+  background-size: 18px 18px;
+}
+
 /*************************
 COLORS
 ************************/
