--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,6 +64,11 @@
     font-size: 0.825em;
     margin-bottom: 20px;
   }
+
+  header {
+    border-bottom: 5px solid #599a68;
+    margin-bottom: 60px;
+  }
 }
 
 
