--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ PAGE: PORTFOLIO
   background-color: #f5f5f5;
   /*background-color: #fff;*/
   color: #bdc3c7;
-
+  border-radius: 0 0 5% 5%;
+  box-shadow: 10px 10px 5px #bdc3c7;
 }
 
 #gallery li a p {
@@ -126,6 +127,10 @@ PAGE: PORTFOLIO
   font-size: 0.75em;
   color: #bdc3c7;
 }
+
+/*#gallery li a img {
+  border-radius: 5% 5% 0 0;
+}*/
 
 /*************************
 PAGE: ABOUT
@@ -186,14 +191,26 @@ body {
 /* green header */
 
 header {
-  background: #6ab47b;
-  border-color: #599a68;
+  /*background: #6ab47b;*/
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.00, #99dff5), color-stop(1.00, #02b0e6));
+  background: -webkit-linear-gradient(#99dff5, #02b0e6);
+  background: -moz-linear-gradient(#99dff5, #02b0e6);
+  background: -o-linear-gradient(#99dff5, #02b0e6);
+  background: -ms-linear-gradient(#99dff5, #02b0e6);
+  background: linear-gradient(#99dff5, #02b0e6);
+
+  /*border-color: #599a68;*/
+  border-color: #0583aa;
 }
 
 /* nav background on mobile devices */
 
 nav {
-  background: #599a68;
+  /*background: #599a68;*/
+  /*background: #0583aa;*/
+  /*background: #059ccb;*/
+  background: #05a4d5;
+  /*background: #07ace0;*/
 }
 
 
@@ -215,12 +232,17 @@ a {
 
 /* nave links */
 nav a, nav a:visited {
-  color: #fff;
+  /*color: #fff;*/
   color: #E7E4E4;
+  /*color: #057295;*/
+
 }
 
 /* selected nav link */
 
 nav a.selected, nav a:hover {
-  color: #32673f;
+  /*color: #32673f;*/
+  /*color: #0583aa;*/
+  /*color: #057295;*/
+  color: #045b77;
 }
