--- a/css/style.css
+++ b/css/style.css
@@ -117,8 +117,9 @@ PAGE: PORTFOLIO
   background-color: #f5f5f5;
   /*background-color: #fff;*/
   color: #bdc3c7;
-  border-radius: 0 0 5% 5%;
+  border-radius: 5% 5% 5% 5%;
   box-shadow: 10px 10px 5px #bdc3c7;
+
 }
 
 #gallery li a p {
@@ -128,8 +129,20 @@ PAGE: PORTFOLIO
   color: #bdc3c7;
 }
 
-/*#gallery li a img {
+#gallery li a img {
   border-radius: 5% 5% 0 0;
+  background-color: #D3D3D3;
+  overflow:hidden;
+   /*-moz-border-radius: 10px;*/
+}
+
+
+/*#gallery li a img:hover {
+  color: white;
+}*/
+
+/*a:hover {
+  color: rgba(0, 204, 153, .4);
 }*/
 
 /*************************
