--- a/css/tahoestyle.css
+++ b/css/tahoestyle.css
@@ -1,6 +1,8 @@
 
 /* universal selector */
 
+/* rems don't inhertit like ems */
+
 /** {
   margin: 0;
   padding: 0;
@@ -10,39 +12,70 @@
 body {
   color: #878787;
   margin: 0;
+  /*font-size: 1em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.5;*/
+  font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*
+    1em = 16px
+  */
 }
 
 
 .main-header {
-  background-color: orange;
+  background-color: #00cc99;
+}
+
+/* Layout Styles --------------- */
+
+.primary-content,
+.secondary-content {
+  width: 60%;
+}
+
+.wildlife {
+  color: white;
+  background-color: #434a52;
 }
 
 .title {
   color: white;
-  font-size: 26px;
+  font-size: 1.625rem; /*  26px/16px  */
 }
 
 ol li {
-  background-color: tomato;
+  /*background-color: tomato;*/
   color: white;
   margin-bottom: 5px;
 }
 
 h1 {
-  font-size: 90px;
-  color: white;
+  font-size: 5.625em; /* 90px / 16px */
+  color: rgba(255, 255, 255, .5);
+  text-transform: uppercase;
+  font-weight: normal;
+  line-height: 1.3;
 }
 
 h2 {
-  font-size: 53px;
+  font-size: 3.312em; /* 53px / 16 */
+  font-weight: normal;
+  /*text-decoration: underline;*/
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.25em /* 20px / 16 */;
   color:#48525c;
 }
 
-.primary-content {
+p {
+
+}
+
+
+
+.primary-content,
+.main-header {
   text-align: center;
 }
 
@@ -54,8 +87,27 @@ h3 {
   border-top: 2px solid lightgrey;
 }
 
+a:link, a:visited {
+  color: rgb(0, 204, 153);
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgba(0, 204, 153, .4);
+}
+
+a:active {
+  color: black;
+}
+
+:focus {
+  color: white;
+  background-color: #00cc99;
+}
+
+
 #main-footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  border-bottom: solid 10px orange;
+  border-bottom: solid 10px #00cc99;
 }
