--- a/css/tahoestyle.css
+++ b/css/tahoestyle.css
@@ -1,113 +1,179 @@
+/* Base Styles -------------------- */
 
-/* universal selector */
-
-/* rems don't inhertit like ems */
-
-/** {
-  margin: 0;
-  padding: 0;
-  color: red;
-}*/
+* {
+  box-sizing: border-box;
+}
 
 body {
   color: #878787;
   margin: 0;
-  /*font-size: 1em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.5;*/
-  font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  /*
-    1em = 16px
-  */
-}
-
-
-.main-header {
-  background-color: #00cc99;
-}
-
-/* Layout Styles --------------- */
-
-.primary-content,
-.secondary-content {
-  width: 60%;
-}
-
-.wildlife {
-  color: white;
-  background-color: #434a52;
-}
-
-.title {
-  color: white;
-  font-size: 1.625rem; /*  26px/16px  */
-}
-
-ol li {
-  /*background-color: tomato;*/
-  color: white;
-  margin-bottom: 5px;
+  font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 {
-  font-size: 5.625em; /* 90px / 16px */
-  color: rgba(255, 255, 255, .5);
+  font-size: 5.625rem; /* 90px/16px  */
+  color: rgba(255, 255, 255, 1);
   text-transform: uppercase;
   font-weight: normal;
   line-height: 1.3;
 }
 
 h2 {
-  font-size: 3.312em; /* 53px / 16 */
+  font-size: 3.3125em; /* 53px/16px  */
   font-weight: normal;
-  /*text-decoration: underline;*/
+  line-height: 1.1;
+  margin: 0 0 .5em; /* 0 0 26px */
 }
 
 h3 {
-  font-size: 1.25em /* 20px / 16 */;
-  color:#48525c;
+  font-size: 1.25em; /* 20px/16px  */
+  color: #48525c;
+  line-height: 1.2;
+  margin-bottom: 1.7em; /* 34px */
 }
 
-p {
-
+img {
+  max-width: 100%;
+  margin-bottom: 20px;
 }
 
-
-
-.primary-content,
-.main-header {
-  text-align: center;
-}
-
-/*.secondary-content {
-
+/*ul {
+  list-style-type: lower-greek;
 }*/
 
-.t-border {
-  border-top: 2px solid lightgrey;
+/*ol {
+  list-style-type: decimal-leading-zero;
+}*/
+ul,
+ol {
+  /*list-style-position: inside;*/
+  /*padding-left: 0;*/
+  margin-left: 30px 0;
 }
 
-a:link, a:visited {
-  color: rgb(0, 204, 153);
+li {
+  /*border: 1px solid #000;*/
+  margin-bottom: 10px;
+}
+
+/* Pseudo-classes ------------------ */
+
+a:link {
+  color: rgb(255, 169, 73);
   text-decoration: none;
 }
 
+a:visited {
+  color: lightblue;
+}
+
 a:hover {
-  color: rgba(0, 204, 153, .4);
+  color: rgba(255, 169, 73, .4);
 }
 
 a:active {
-  color: black;
+  color: lightcoral;
 }
 
-:focus {
+/* Main Styles --------------------- */
+
+.main-header {
+  padding-top: 170px;
+  height: 850px;
+
+  background: #ffa949 url('../pages/img/mountains.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.title {
   color: white;
-  background-color: #00cc99;
+  font-size: 1.625rem; /* 26px/16px */
 }
 
+.intro {
+  font-size: 1.25em; /* 20px/16px */
+  line-height: 1.6;
+}
 
-#main-footer {
+.primary-content,
+.main-header,
+.main-footer {
+  text-align: center;
+}
+
+.primary-content {
+	padding-top: 25px;
+  padding-bottom: 95px;
+}
+
+.secondary-content {
+	padding-top: 80px;
+	padding-bottom: 70px;
+  border-bottom: 2px solid #dfe2e6;
+}
+
+.callout {
+  font-size: 1.25em;
+  border-bottom: 3px solid;
+  padding: 0 9px 3px;
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.main-footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  border-bottom: solid 10px #00cc99;
+  border-bottom: 10px solid #ffa949;
+}
+
+.t-border {
+  border-top: 2px solid #dfe2e6;
+}
+
+/* Layout Styles ------------------ */
+
+.primary-content,
+.secondary-content {
+  width: 75%;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin: auto;
+  max-width: 960px;
+}
+
+.wildlife {
+  color: white;
+  text-align: left;
+  padding: 18% 24%;
+  border-top: 10px solid #ffa949;
+  margin: 105px 0 60px;
+  background: #434a52 url('../img/bear.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.arrow {
+  width: 50px;
+}
+
+/* Floated Columns ------------------ */
+
+.resorts,
+.tips {
+  width: 46.5%;
+}
+
+.tips {
+  float: left;
+}
+
+.resorts {
+  float: right;
+}
+
+/* Float Clearfix ------------------ */
+
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
 }
