--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,13 @@ header {
   margin: 0 0 30px 0;
   padding: 5px 0 0 0;
   width: 100%;
+
 }
 
 #logo {
   text-align: center;
   margin: 0;
+
 }
 
 h1 {
@@ -49,6 +51,19 @@ h1 {
   font-size: 1.75em;
   font-weight: normal;
   line-height: 0.8em;
+  text-shadow: 5px 5px 10px #045b77;
+  /*text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);*/
 }
 
 h2 {
@@ -129,10 +144,11 @@ PAGE: PORTFOLIO
   color: #bdc3c7;
 }
 
-#gallery li a img {
+#gallery li img {
   border-radius: 5% 5% 0 0;
   background-color: #D3D3D3;
   overflow:hidden;
+  /*box-shadow: inset 0px 0px 50px 10px rgba(0, 0, 0, 1);*/
    /*-moz-border-radius: 10px;*/
 }
 
@@ -231,8 +247,9 @@ nav {
 /* logo text */
 
 h1, h2 {
-  color: #fff;
+  /*color: #fff;*/
   color: #E7E4E4;
+  /*color: rgba(231,228,228, .9);*/
 
 }
 
