--- a/css/tahoestyle.css
+++ b/css/tahoestyle.css
@@ -16,6 +16,19 @@ h1 {
   text-transform: uppercase;
   font-weight: normal;
   line-height: 1.3;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, .8);
+  /*text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);*/
 }
 
 h2 {
@@ -35,24 +48,15 @@ h3 {
 img {
   max-width: 100%;
   margin-bottom: 20px;
+  border-radius: 10px;
 }
 
-/*ul {
-  list-style-type: lower-greek;
-}*/
-
-/*ol {
-  list-style-type: decimal-leading-zero;
-}*/
 ul,
 ol {
-  /*list-style-position: inside;*/
-  /*padding-left: 0;*/
-  margin-left: 30px 0;
+  margin: 30px 0;
 }
 
 li {
-  /*border: 1px solid #000;*/
   margin-bottom: 10px;
 }
 
@@ -80,9 +84,22 @@ a:active {
 .main-header {
   padding-top: 170px;
   height: 850px;
-
   background: #ffa949 url('../pages/img/mountains.jpg') no-repeat center;
   background-size: cover;
+  /* graddeints  linear --------------------------*/
+  /*background-image: linear-gradient(#ffa949, firebrick);
+  background-image: linear-gradient(to top, #ffa949, firebrick); /* reverse top to botteom*/
+  /*background-image: linear-gradient(to left, #ffa949, firebrick); /* left to right */
+  /*background-image: linear-gradient(150deg, #ffa949, firebrick); /* degree  by clockwise*//*/*/
+
+  /* graddeints  radial --------------------------*/
+  /*background-image: radial-gradient(#ffa949, firebrick);*/
+  /*background-image: radial-gradient(circle, #ffa949, firebrick);*/
+  /* change postion of circle */
+  /*background-image: radial-gradient(circle at top, #ffa949, firebrick);
+  background-image: radial-gradient(circle at top right, #ffa949, firebrick, dodgerblue);
+  background-image: radial-gradient(circle at top right, #ffa949 0%, firebrick 50%, dodgerblue 100%);
+  background-image: radial-gradient(circle at top right, #ffa949 0%, firebrick 20%, dodgerblue 120%);*/
 }
 
 .title {
@@ -147,8 +164,24 @@ a:active {
   padding: 18% 24%;
   border-top: 10px solid #ffa949;
   margin: 105px 0 60px;
-  background: #434a52 url('../img/bear.jpg') no-repeat center;
+  background: #434a52 url('../pages/img/bear.jpg') no-repeat center;
   background-size: cover;
+  /*box-shadow: 0 15px 20px -12px rgba(0, 0, 0, .5);*/
+  /*sbox-shadow: inset 20px 20px 5px rgba(0, 0, 0, 1); /* inside of border area*/
+  box-shadow: inset 0px 0px 50px 10px rgba(0, 0, 0, 1); /* shadow inside and equal*/
+  border-radius: 50px 10px;
+  /*border-radius: 25px;*/
+
+  /*border-radius: 100% 25px; /* interesting shaps mixing pixels and percentage */
+  /*border-radius: 50%;*/
+
+  /* perfect circle*/
+  /*border-radius: 50%;
+  width: 500px;
+  height: 500px;*/
+
+
+
 }
 
 .arrow {
