--- a/css/tahoestyle.css
+++ b/css/tahoestyle.css
@@ -1,3 +1,12 @@
+/* Web Fonts -------------------- */
+@font-face {
+  font-family: 'Abolition Regular';
+  src: url('../fonts/abolition-regular-webfont.eot');
+  src: url('../fonts/abolition-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/abolition-regular-webfont.woff') format('woff'),
+       url('../fonts/abolition-regular-webfont.ttf') format('truetype');
+}
+
 /* Base Styles -------------------- */
 
 * {
@@ -10,6 +19,11 @@ body {
   font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+h1,
+h2 {
+  font-family: 'Abolition Regular', Helvetica, Arial, sans-serif;
+}
+
 h1 {
   font-size: 5.625rem; /* 90px/16px  */
   color: rgba(255, 255, 255, 1);
@@ -17,6 +31,7 @@ h1 {
   font-weight: normal;
   line-height: 1.3;
   text-shadow: 0 1px 1px rgba(0, 0, 0, .8);
+  margin: 12px 0 0;
   /*text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
                0 3px 0 #bbb,
@@ -84,7 +99,9 @@ a:active {
 .main-header {
   padding-top: 170px;
   height: 850px;
-  background: #ffa949 url('../pages/img/mountains.jpg') no-repeat center;
+  background: linear-gradient(#ffa949, transparent 90%),
+              linear-gradient(0deg, #fff, transparent),
+              #ffa949 url('../pages/img/mountains.jpg') no-repeat center;
   background-size: cover;
   /* graddeints  linear --------------------------*/
   /*background-image: linear-gradient(#ffa949, firebrick);
@@ -105,6 +122,10 @@ a:active {
 .title {
   color: white;
   font-size: 1.625rem; /* 26px/16px */
+  letter-spacing: .065em;
+  font-weight: 200;
+  border-bottom: 2px solid;
+  padding-bottom: 10px;
 }
 
 .intro {
@@ -186,6 +207,7 @@ a:active {
 
 .arrow {
   width: 50px;
+  margin-top: 150px;
 }
 
 /* Floated Columns ------------------ */
@@ -210,3 +232,116 @@ a:active {
   display: table;
   clear: both;
 }
+
+/* Media Queries ------------------ */
+
+@media(max-width: 1024px){
+  .primary-content,
+  .secondary-content {
+    width: 90%;
+  }
+  .wildlife {
+    padding: 10% 12%;
+    margin: 50px 0 20px;
+  }
+}
+
+@media(max-width: 768px){
+  .primary-content,
+  .secondary-content {
+    width: 100%;
+    padding: 20px;
+    border-top: none;
+  }
+  .main-header {
+    max-height: 380px;
+    padding: 50px 25px 0;
+  }
+  .title {
+    font-size: 1.3rem;
+    border: none;
+  }
+  h1 {
+    font-size: 5rem;
+    line-height: 1.1;
+  }
+  .arrow {
+    display: none;
+  }
+  .intro {
+    font-size: 1rem;
+  }
+  .resorts,
+  .tips {
+    float: none;
+    width: 100%;
+  }
+  .main-footer{
+    padding: 20px 0;
+  }
+}
+
+/*@media(max-width: 960px){
+  body {
+    background: royalblue;
+  }
+  p {
+    color: white;
+  }
+}
+
+@media (max-width: 480px){
+  body {
+    background: darkred;
+  }
+}
+
+@media(min-width: 481px) and (max-width: 700px){
+  body {
+    background: seagreen;
+  }
+  p {
+    color: white;
+  }
+}*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Media Queries ------------------ */
